bug: temp fix scrollbar appearing on board detail page

--- a/frontend/src/tailwind.css
+++ b/frontend/src/tailwind.css
@@ -152,7 +152,3 @@
     }
   }
 }
-
-* {
-  min-height: 0;
-}
